[build-system]
requires = ["hatchling", "bnot", "sendroid"]
build-backend = "hatchling.build"

[project]
name = "bnot"
version = "1.0a1"
authors = [
	{name="bwilk315", email="bwilk315@onet.pl"}
]
description = "Simple Client Server Communication"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.5"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
	"Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/bwilk315/cliserc"
